--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,14 @@
 
     <body>
         <header>
-            <h1 id="title">trrb</i></h1>
+            <h1 id="title">trrb</h1>
             <div id="navbar">
                 <ul id="list-navbar">
                     <li><a href="index.html">home</a> |</li> 
+                    <li><a href="blog">blog</a> |</li>
                     <li><a href="projects.html">projects</a> |</li>
                     <li><a href="about.html">about</a> |</li>
-                    <li><a href="upload.html">upload</i></a> |</li>
+                    <li><a href="upload.html">upload</a> |</li>
                     <li><a href="contact.html" style="color:#9ae29a">contact</a> |</li>
                     <li><a href="https://github.com/trrb" target="_blank">github</a></li>
                 </ul>
