--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li><a href="about.html">about</a> |</li>
                     <li><a href="upload.html">upload</a> |</li>
                     <li><a href="contact.html">contact</a> |</li>
+                    <li><a href="lainring.html">lainring</a> |</li>
                     <li><a href="https://github.com/trrb" target="_blank">github</a></li>
                 </ul>
             </div>
