--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,7 @@
                     <li><a href="about.html">about</a> |</li>
                     <li><a href="upload.html">upload</a> |</li>
                     <li><a href="contact.html">contact</a> |</li>
+                    <li><a href="lainring.html">lainring</a> |</li>
                     <li><a href="https://github.com/trrb" target="_blank">github</a></li>
                 </ul>
             </div>
@@ -34,7 +35,7 @@
                         <li><a href="https://github.com/trrb/oneself" target="_blank">oneself</a>, a site that allows you to organize your learning and productivity through different tools.</li>
                         <li><a href="https://github.com/trrb/budgie" target="_blank">budgie</a>, a script to sort photos by creating folders named after the date they were taken by importing the EXIF from the metadata. </li>
                         <li><a href="https://github.com/trrb/macaw" target="_blank">macaw</a>, a simple encrypted password manager in Python.</li>
-                        <li>Thinkcentre, personal linux server where I tinker with</li>
+                        <li>Hydre, personal linux server where I tinker with</li>
                     </ul>
                 </div>
             </div>
