--- a/upload.html
+++ b/upload.html
@@ -20,6 +20,7 @@
                     <li><a href="about.html">about</a> |</li>
                     <li><a href="upload.html" style="color:#9ae29a">upload</a> |</li>
                     <li><a href="contact.html">contact</a> |</li>
+                    <li><a href="lainring.html">lainring</a> |</li>
                     <li><a href="https://github.com/trrb" target="_blank">github</a></li>
                 </ul>
             </div>
