--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,8 @@
         <div id="homepage">
             <h1 id="welcome">contact</h1>
             <div id="presentation">
-                <p>At the moment, I have no other means of communication than <strike>email</strike> & twitter.<br />
-                    You can contact me at <strike><span style="color:#9ae29a;">trrb<span style="color:#e54e4e;">[at]</span>disroot<span style="color:#e54e4e;">[dot]</span></span><span style="color:#9ae29a;">org</strike></span></span> and at <a href="https://twitter.com/tweetrrb" style="text-decoration:none;">@tweetrrb</a>. <br />
+                <p>At the moment, I have no other means of communication than mail & twitter.<br />
+                    You can contact me at <span style="color:#9ae29a;">t2rb<span style="color:#e54e4e;">[at]</span>proton<span style="color:#e54e4e;">[dot]</span></span><span style="color:#9ae29a;">me</strike></span></span> and at <a href="https://twitter.com/tweetrrb" style="text-decoration:none;">@tweetrrb</a>. <br />
                     I only check email & twitter <span style="text-decoration:underline;color:#e54e4e;">once a week</span>, so don't be surprised if I don't respond quickly. 
                 </p>
             </div>
