--- a/lainring.html
+++ b/lainring.html
@@ -44,7 +44,7 @@
                         <li><a href="https://nightt.neocities.org/" target="_blank"><img src="img/nightt-banner.gif" alt="nightt banner" /></a></li>
                         <li><a href="https://oedo808.neocities.org" target="_blank"><img src="img/oedo808-banner.gif" alt="oedo808 banner" /></a></li>
                         <li><a href="https://www.cozynet.org/" target="_blank"><img src="img/cozy-banner.gif" alt="cozy banner" /></a></li>
-                        <li><a href="https://www.urof.net/" target="_blank"><img src="img/urof-banner.gif" alt="urof banner" /></a></li>
+                        <li><a href="https://urof.net/" target="_blank"><img src="img/urof-banner.gif" alt="urof banner" /></a></li>
                     </ul>
                 </div>
             </div>
