--- a/contact.html
+++ b/contact.html
@@ -7,21 +7,21 @@
         <title>trrb > contact</title>
         <link rel="icon" type="image/png" href="img/icon2.png" />
         <link rel="stylesheet" href="style.css" />
+        <script src="https://kit.fontawesome.com/9bfd2e7f89.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
+        <div class="mainpage">
         <header>
             <h1 id="title">trrb</h1>
             <div id="navbar">
                 <ul id="list-navbar">
                     <li><a href="index.html">home</a> |</li> 
-                    <li><a href="blog">blog</a> |</li>
-                    <li><a href="projects.html">projects</a> |</li>
+                    <li><a href="blog">posts</a> |</li>
                     <li><a href="about.html">about</a> |</li>
-                    <li><a href="upload.html">upload</a> |</li>
-                    <li><a href="contact.html" style="color:#9ae29a">contact</a> |</li>
+                    <li><a href="projects.html">projects</a> |</li>
                     <li><a href="lainring.html">lainring</a> |</li>
-                    <li><a href="https://github.com/trrb" target="_blank">github</a></li>
+                    <li><a href="contact.html" style="color:#3582fc">contact</a></li>
                 </ul>
             </div>
         </header>
@@ -30,21 +30,19 @@
             <h1 id="welcome">contact</h1>
             <div id="presentation">
                 <p>At the moment, I have no other means of communication than mail & twitter.<br />
-                    You can contact me at <span style="color:#9ae29a;">t2rb<span style="color:#e54e4e;">[at]</span>proton<span style="color:#e54e4e;">[dot]</span></span><span style="color:#9ae29a;">me</span></span> and at <a href="https://twitter.com/tweetrrb" style="text-decoration:none;">@tweetrrb</a>. <br />
+                    You can contact me at <span style="color:#5c9cfc;">t2rb<span style="color:#275eb6;">[at]</span>proton<span style="color:#275eb6;">[dot]</span></span><span style="color:#5c9cfc;">me</span></span> and at <a href="https://twitter.com/tweetrrb" style="text-decoration:none;">@tweetrrb</a>. <br />
                     I only check email & twitter <span style="text-decoration:underline;color:#e54e4e;">once a week</span>, so don't be surprised if I don't respond quickly. 
                 </p>
             </div>
 
-        <div class="footer">
-            <ul class="banner">
-                <li><a href="https://lainchan.org" target="_blank"><img src="img/lainchan-button.png" alt="lainchan.org"></a></li>
-                <li><a href="https://www.kernel.org/" target="_blank"><img src="img/linux-button.gif" alt="kernel"></a></li>
-                <li><a href="https://www.w3schools.com/html/" target="_blank"><img src="img/html.gif" alt="html"></a></li>
-                <li><img src="img/internet-privacy.gif" alt="internet privacy"></li>
-                <li><img src="img/torrents.gif" alt="nocookie"></a></li>
-                <li><a href="https://anybrowser.org/campaign/index.html" target="_blank"><img src="img/any-browser.png" alt="any browser"></a></li>
-                <li><img src="img/nocookie.gif" alt="nocookie"></a></li>
-            </ul>
+            <div class="footer">
+                <ul class="link">
+                    <li><a href="https://github.com/trrb" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                    <li><a href="https://twitter.com/tweetrrb" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="mailto:t2rb@proton.me" target="_blank"><i class="fa-solid fa-envelope"></i></a></li>
+                    <li class="version"><a href="https://trrb.xyz/v1" target="_blank">v2</a></li>
+                </ul>
+            </div>
         </div>
     </body>
 </html>
