--- a/v1/projects.html
+++ b/v1/projects.html
@@ -7,21 +7,21 @@
         <title>trrb > projects</title>
         <link rel="icon" type="image/png" href="img/icon2.png" />
         <link rel="stylesheet" href="style.css" />
-        <script src="https://kit.fontawesome.com/9bfd2e7f89.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
-        <div class="mainpage">
         <header>
             <h1 id="title">trrb</h1>
             <div id="navbar">
                 <ul id="list-navbar">
                     <li><a href="index.html">home</a> |</li> 
-                    <li><a href="blog">posts</a> |</li>
+                    <li><a href="blog">blog</a> |</li>
+                    <li><a href="projects.html" style="color:#9ae29a">projects</a> |</li>
                     <li><a href="about.html">about</a> |</li>
-                    <li><a href="projects.html" style="color:#3582fc">projects</a> |</li>
+                    <li><a href="upload.html">upload</a> |</li>
+                    <li><a href="contact.html">contact</a> |</li>
                     <li><a href="lainring.html">lainring</a> |</li>
-                    <li><a href="contact.html">contact</a></li>
+                    <li><a href="https://github.com/trrb" target="_blank">github</a></li>
                 </ul>
             </div>
         </header>
@@ -42,13 +42,15 @@
         </div>
 
         <div class="footer">
-            <ul class="link">
-                <li><a href="https://github.com/trrb" target="_blank"><i class="fa-brands fa-github"></i></a></li>
-                <li><a href="https://twitter.com/tweetrrb" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-                <li><a href="mailto:t2rb@proton.me" target="_blank"><i class="fa-solid fa-envelope"></i></a></li>
-                <li class="version"><a href="https://trrb.xyz/v1" target="_blank">v2</a></li>
+            <ul class="banner">
+                <li><a href="https://lainchan.org" target="_blank"><img src="img/lainchan-button.png" alt="lainchan.org"></a></li>
+                <li><a href="https://www.kernel.org/" target="_blank"><img src="img/linux-button.gif" alt="kernel"></a></li>
+                <li><a href="https://www.w3schools.com/html/" target="_blank"><img src="img/html.gif" alt="html"></a></li>
+                <li><img src="img/internet-privacy.gif" alt="internet privacy"></li>
+                <li><img src="img/torrents.gif" alt="nocookie"></a></li>
+                <li><a href="https://anybrowser.org/campaign/index.html" target="_blank"><img src="img/any-browser.png" alt="any browser"></a></li>
+                <li><img src="img/nocookie.gif" alt="nocookie"></a></li>
             </ul>
         </div>
-    </div>
     </body>
 </html>
