Responsive for mobile

--- a/projects.html
+++ b/projects.html
@@ -29,9 +29,17 @@
                     <li><a href="projects.html"><span class="active">projects</span></a></li>
                     <li><a href="ring.html">webring</a></li>
                 </ul>
+            <!-- nav-links but for mobile -->
+            <ul class="nav-link-mobile">
+                <li><a href="index.html"><i class="fa-solid fa-house"></i></a></li>
+                <li><a href="blog.html"><i class="fa-solid fa-note-sticky"></i></a></li>
+                <li><a href="projects.html"><span class="active"><i class="fa-solid fa-briefcase"></i></span></a></li>
+                <li><a href="ring.html"><i class="fa-solid fa-link"></i></a></li>
+            </ul> 
 
                 <ul class="footer-links">
                     <li><a href="https://github.com/trrb" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/theobourdier/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
                     <li><a href="https://twitter.com/tweetrrb" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href="mailto:theobourdier1@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a></li>
                 </ul>
@@ -53,6 +61,13 @@
                     </ul>
                     <div class="tux"><img alt="tux pixel art" src="./img/tux.png"></div>
                 </div>
+            <!-- footer links on mobile -->
+            <ul class="footer-links-mobile">
+                <li><a href="https://github.com/trrb" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/theobourdier/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>                
+                <li><a href="https://twitter.com/tweetrrb" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="mailto:theobourdier1@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a></li>
+            </ul> 
             </div>
         </div>
     </div>
