--- a/config/footer.html
+++ b/config/footer.html
@@ -1,6 +1,13 @@
+</div> 
 </div>
 </div>
-</div>
+            <!-- footer links on mobile -->
+            <ul class="footer-links-mobile">
+                <li><a href="https://github.com/trrb" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/theobourdier/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+                <li><a href="https://twitter.com/tweetrrb" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="mailto:theobourdier1@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a></li>
+            </ul> 
 </div>
 </body>
 </html>
