--- a/index.html
+++ b/index.html
@@ -29,9 +29,17 @@
                     <li><a href="projects.html">projects</a></li>
                     <li><a href="ring.html">webring</a></li>
                 </ul>
+            <!-- nav-links but for mobile -->
+                <ul class="nav-link-mobile">
+                    <li><a href="index.html"><span class="active"><i class="fa-solid fa-house"></i></span></a></li>
+                    <li><a href="blog.html"><i class="fa-solid fa-note-sticky"></i></a></li>
+                    <li><a href="projects.html"><i class="fa-solid fa-briefcase"></i></a></li>
+                    <li><a href="ring.html"><i class="fa-solid fa-link"></i></a></li>
+                </ul>
 
                 <ul class="footer-links">
                     <li><a href="https://github.com/trrb" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/theobourdier/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
                     <li><a href="https://twitter.com/tweetrrb" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href="mailto:theobourdier1@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a></li>
                 </ul>
@@ -48,6 +56,13 @@
                 <p>I have a few basics in Python, which are very useful to write small scripts to automate tasks in my everyday life (such as <a href="https://github.com/trrb/budgie" target="_blank">Budgie</a>, a script to sort photos by creating folders named after the date they were taken by importing the EXIF from the metadata).</p>
                 <p>On the hardware side, I have a Lenovo Thinkcentre M700 Tiny with an i3-6100T coupled with 24GB of DDR4 RAM transformed into a Linux server running Proxmox. This server allows me to tinker and understand the functioning of a server, I host different services such as a Minecraft server for my friends and me, Jellyfin which is a media center that allows to watch movies and series, a small NAS, and soon a temporary file uploading service that will be available on this site.</p> 
                 </div>
+            <!-- footer links on mobile -->
+            <ul class="footer-links-mobile">
+                <li><a href="https://github.com/trrb" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/theobourdier/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+                <li><a href="https://twitter.com/tweetrrb" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="mailto:theobourdier1@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a></li>
+            </ul>    
             </div>
         </div>
     </div>
