--- a/all_tags.html
+++ b/all_tags.html
@@ -35,7 +35,7 @@
                     <li><a href="blog.html"><span class="active"><i class="fa-solid fa-note-sticky"></i></span></a></li>
                     <li><a href="projects.html"><i class="fa-solid fa-briefcase"></i></a></li>
                     <li><a href="ring.html"><i class="fa-solid fa-link"></i></a></li>
-                </ul>                
+                </ul>
 
                 <ul class="footer-links">
                     <li><a href="https://github.com/trrb" target="_blank"><i class="fa-brands fa-github"></i></a></li>
@@ -61,10 +61,12 @@
 <h3>All tags</h3>
 <ul>
 <li><a href="tag_logs.html">logs</a> &mdash; 1 post</li>
+<li><a href="tag_M700.html">M700</a> &mdash; 1 post</li>
+<li><a href="tag_projects.html">projects</a> &mdash; 1 post</li>
 </ul>
 <div id="all_posts"><a href="./blog.html">Back to the index page</a></div>
 </div>
-</div>
+</div> 
 </div>
 </div>
             <!-- footer links on mobile -->
