--- a/tag_M700.html
+++ b/tag_M700.html
@@ -49,7 +49,7 @@
         <div class="right">
             <div class="right-panel">
                 <div class="right-title">> Blog</div>
-                <div class="right-text"><title> &mdash; All posts</title>
+                <div class="right-text"><title> &mdash; Posts tagged "M700"</title>
 </head><body>
 <div id="divbodyholder">
 <div class="headerholder"><div class="header">
@@ -58,17 +58,48 @@
 <div id="description"></div>
 </div></div></div>
 <div id="divbody"><div class="content">
-<h3>All posts</h3>
-<h4 class='allposts_header'>October 2022</h4>
+<h3><a class="ablack" href="m70029618.html">
+M700
+</a></h3>
+<!-- bashblog_timestamp: #202210122333.50# -->
+<div class="subtitle">October 12, 2022 &mdash; 
+tb
+</div>
+<!-- text begin -->
+
+<p>Hello!</p>
+
+<p>I'm going to present you very briefly my little server.</p>
+<p>It's a Lenovo Thinkcentre M700 Tiny bought 90€ on eBay.</p>
+<p>Its specs are :</p>
 <ul>
-<li><a href="./m70029618.html">M700</a> &mdash; October 12, 2022</li>
-<li><a href="./hello-world.html">Hello World!</a> &mdash; October 12, 2022</li>
-<li><a href="./ring.html"></a> &mdash; October 12, 2022</li>
-<li><a href="./projects.html"></a> &mdash; October 12, 2022</li>
-<li><a href="./index.html"></a> &mdash; October 12, 2022</li>
-<li><a href="./hello.html"></a> &mdash; October 12, 2022</li>
+    <li>CPU: Intel i3-6100T @ 3.2GHz Quad-core</li>
+    <li>RAM: 24GB DDR4 @ 2133MHz</li>
+    <li>Storage: 250GB SSD</li>
 </ul>
-<div id="all_posts"><a href="./blog.html">Back to the index page</a></div>
+
+<br>
+<img alt="m700" src="img/m700.jpg">
+<br>    
+
+I use this server to host :
+<ul>
+    <li>Minecraft server for my friends</li>
+    <li>Jellyfin</li>
+    <li>a NAS</li>
+    <li>temporary file uploader (soon)</li>
+</ul>
+    
+The plan is to increase the storage size by adding a 1Tb M.2 SSD.
+    
+I am currently designing a custom rack mount for this server, with the idea of adding a second one to make a cluster.
+
+<br>
+<img alt="m700 rack design" src="img/m700-rack-3d.png">
+
+<p>Tags: <a href='tag_M700.html'>M700</a>, <a href='tag_projects.html'>projects</a></p>
+
+<!-- text end -->
 </div>
 </div> 
 </div>
