--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
                         <li><a href="https://github.com/trrb/budgie" target="_blank">Budgie</a>, a script to sort photos by creating folders named after the date they were taken by importing the EXIF from the metadata.</li>
                         <li><a href="https://github.com/trrb/macaw" target="_blank">Macaw</a>, a simple (discontinued) encrypted password manager in Python.</li>
                         <li><a href="./projects/hortus" target="_blank">Hortus</a>, an automatic watering system for indoor and outdoor plants.</li>
-                        <li><a href="./projects/m700" target="_blank">M700</a>, a server with an i3-6100T coupled with 24GB of DDR4 RAM transformed into a Linux server running Proxmox</li>
+                        <li><a href="m70029618.html" target="_blank">M700</a>, a server with an i3-6100T coupled with 24GB of DDR4 RAM transformed into a Linux server running Proxmox</li>
                     </ul>
                     <div class="tux"><img alt="tux pixel art" src="./img/tux.png"></div>
                 </div>
