👋🏻 Add Meta Property

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Théo Bourdier">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://theob.fr/images/favicon.png">
+    <meta property="og:url" content="https://theob.fr/">
+    <meta property="og:description" content="Apprenti développeur front-end">
     <script src="https://kit.fontawesome.com/9bfd2e7f89.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css">
